Assignment2_Zhao_Duo/tests/automated/tests/bad/BasicNumbersWithBadChars.calc
a %.0 b %1. c %2.3 d %34.5 e %6.78 f %99.99 g %5 h %78
%.0
%1.
%2.3
%34.5
%6.78
%99.99
%5
%78
a .%0 b 1%. c 2%.3 d 3%4.5 e 6%.78 f 9%9.99 g 5% h 7%8
.%0
1%.
2%.3
3%4.5
6%.78
9%9.99
5%
7%8
a .0% b 1.% c 2.%3 d 34%.5 e 6.%78 f 99%.99 h 78%
.0%
1.%
2.%3
34%.5
6.%78
99%.99
78%
2.3% d 34.%5 e 6.7%8 f 99.%99
2.3%
34.%5
6.7%8
9.9%9
34.5% e 6.78% f 99.9%9
34.5%
6.78%
99.9%9
99.99%
